Moved settings into :user in profiles.clj. Added an empty test-case.